tests/baselines/reference/regularExpressionGroupNameSuggestions.errors.txt
regularExpressionGroupNameSuggestions.ts(1,18): error TS1503: Named capturing groups are only available when targeting 'ES2018' or later.
regularExpressionGroupNameSuggestions.ts(1,27): error TS1532: There is no capturing group named 'Foo' in this regular expression.


==== regularExpressionGroupNameSuggestions.ts (2 errors) ====
    const regex = /(?<foo>)\k<Foo>/;
                     ~~~~~
!!! error TS1503: Named capturing groups are only available when targeting 'ES2018' or later.
                              ~~~
!!! error TS1532: There is no capturing group named 'Foo' in this regular expression.
!!! related TS1369: Did you mean 'foo'?
    